styles/index.css
/* ... */
#window .banner .userinfo .avatar {
    display: block; float: right; margin-left: 4px;
}
#window .banner .userinfo .avatar_40x40 {

}
#window .banner .userinfo .avatar_80x80 {

}
#window .banner .userinfo .avatar_160x160 {

}
#window .banner .userinfo .avatar .sprite {
    position: relative;
}
#window .banner .userinfo .avatar_40x40 .sprite_40x40 {
    top: -12px;
    margin-right: -4px;
}
#window .banner .userinfo .avatar_40x40 .sprite_40x40_00:hover {
    background-position: -80px 0;
}
#window .banner .userinfo .avatar_40x40 .sprite_80x80 {
    top: -52px;
    margin-right: -24px;
    margin-left: -20px;
}
#window .banner .userinfo .avatar_40x40 .sprite_80x80_00:hover {
    background-position: -160px 0;
}
#window .banner .userinfo .avatar_80x80 .sprite_80x80 {
    top: -24px;
    margin-right: -8px;
}
#window .banner .userinfo .avatar_160x160 .sprite_160x160 {
    top: -48px;
    margin-right: -16px;
}

#window .banner .userinfo .info {
    display: block;
    float: left;
    text-align: right;
    overflow: hidden;
    text-transform: none;
}
#window .banner .userinfo .info .username {
    display: block;
    font-size: 10px;
    line-height: 13px;
    color: #FFFFFF;
}
#window .banner .userinfo .info .username .place {
    text-decoration: none;
    color: #FFFFFF;
}
#window .banner .userinfo .info .username .place:hover,
#window .banner .userinfo .info .username .place_active {
    text-decoration: underline;
}
#window .banner .userinfo .info .file {
    font-size: 9px;
    line-height: 12px;
    color: #FFFFFF;
    text-decoration: none;
}
#window .banner .userinfo .info .file:hover,
#window .banner .userinfo .info .file_active {
    text-decoration: underline;
}
#window .banner .userinfo .info .file_new {

}
#window .banner .userinfo .info .file_load {

}
#window .banner .userinfo .info .file_save {

}
#window .banner .userinfo .info .file_exit {

}



#window .banner .adminlink {
    position: absolute;
    display: block;
    top: 4px;
    left: 4px;
    width: 19px;
    height: 19px;
    z-index: 100;
}
#window .banner .adminlink .link {
    display: block;
    box-sizing: border-box;
    margin: 0;
    width: 19px;
    height: 19px;
    font-size: 13px;
    line-height: 13px;
    padding: 2px;
    border: 1px solid #751f1f;
    background-color: #8c2525;
    color: #8c2525;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
    opacity: 0.3;
}
#window .banner .adminlink .link:hover {
    text-decoration: none;
    background-color: #a52c2c;
    color: #a52c2c;
    opacity: 0.9;
}
#window .banner .adminlink .link:before {
    content: " ";
    display: block;
    box-sizing: border-box;
    width: 9px;
    height: 9px;
    font-size: 9px;
    line-height: 9px;
    text-decoration: none;
    padding: 2px;
    margin: 2px;
    border: 0 none transparent;
    background-color: #EFEFEF;
    color: #EFEFEF;
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
}
#window .banner .adminlink .link:hover:before {
    text-decoration: none;
    background-color: #FFFFFF;
    color: #FFFFFF;
}
#window .banner .adminlink .link span {
    display: none;
}


#window .menu,
#window .menu .subs {
    display: block;
    position: relative;
    margin: 0 8px 8px;
    padding: 0;
    width: 750px;
    height: auto;
    font-size: 10px;
    line-height: 30px;
    letter-spacing: 2px;
    text-transform: none;
    padding: 0;
    border-radius: 0 0 0.75em 0.75em;
    -moz-border-radius: 0 0 0.75em 0.75em;
    -webkit-border-radius: 0 0 0.75em 0.75em;
    color: #696969;
    border: 2px solid transparent;
    border-color: #1A1A1A !important;
    border-top-width: 1px;
    background-color: #222222;
    background-image: linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0, rgba(0,0,0,0.30)),
        color-stop(1, rgba(0,0,0,0.20))
    );
    background-position: 0 0;
    text-shadow: 1px 1px 4px #333333;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -o-user-select: none;
    user-select: none;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    -website-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
    overflow: visible;
    background-clip: padding-box;
    -moz-background-clip: padding;
    -webkit-background-clip: padding;
}
#window .menu .subs {
    width: auto;
}
#mmrpg #window .menu {
    border-color: #1A1A1A !important;
    background-image: linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0.30) 0%, rgba(0,0,0,0.20) 100%);
    background-image: -webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0, rgba(0,0,0,0.30)),
        color-stop(1, rgba(0,0,0,0.20))
    );
}

#window .menu .main,
#window .menu .subs {

}
#window .menu .main {
    display: block;
    position: relative;
    font-size: 0;
    height: 30px;
    z-index: 30;
}
/* ... */

